--- a/requirements.txt
+++ b/requirements.txt
@@ -1,145 +1,8 @@
-alpaca-trade-api==1.2.3
-altair==4.1.0
-aniso8601==9.0.1
-appnope==0.1.2
-argon2-cffi==20.1.0
-astor==0.8.1
-async-generator==1.10
-attrs==20.3.0
-Automat==20.2.0
-backcall==0.2.0
-base58==2.1.0
-beautifulsoup4==4.9.3
-bleach==3.2.1
-blinker==1.4
-cachetools==4.2.0
-certifi==2020.12.5
-cffi==1.14.4
-chardet==4.0.0
-click==7.1.2
-coinapi.rest.v1==1.3
-constantly==15.1.0
-cryptography==3.4.7
-cssselect==1.1.0
-cycler==0.10.0
-DateTime==4.3
-decorator==4.4.2
-defusedxml==0.6.0
-docopt==0.6.2
-entrypoints==0.3
-et-xmlfile==1.0.1
-Flask==2.0.1
-Flask-RESTful==0.3.9
-gitdb==4.0.5
-GitPython==3.1.12
-h2==3.2.0
-hpack==3.0.0
-hyperframe==5.2.0
-hyperlink==21.0.0
-idna==2.10
-incremental==21.3.0
-ipykernel==5.4.3
-ipython==7.19.0
-ipython-genutils==0.2.0
-ipywidgets==7.6.3
-itemadapter==0.3.0
-itemloaders==1.0.4
-itsdangerous==2.0.1
-jdcal==1.4.1
-jedi==0.18.0
-Jinja2==3.0.1
-jmespath==0.10.0
-joblib==1.0.0
-jsonschema==3.2.0
-jupyter-client==6.1.11
-jupyter-core==4.7.0
-jupyterlab-pygments==0.1.2
-jupyterlab-widgets==1.0.0
-kaggle==1.5.10
-kiwisolver==1.3.1
-limit==0.2.3
-lxml==4.6.3
-MarkupSafe==2.0.1
 matplotlib==3.3.3
-mistune==0.8.4
-msgpack==1.0.2
-nbclient==0.5.1
-nbconvert==6.0.7
-nbformat==5.1.2
-nest-asyncio==1.4.3
+wordcloud==1.8.1
+numpy==1.19.5
+remotezip==0.9.2
+streamlit==0.74.1
 networkx==2.5
 nltk==3.5
-notebook==6.2.0
-numpy==1.19.5
-openpyxl==3.0.6
-packaging==20.8
-pandas==1.1.5
-pandocfilters==1.4.3
-parsel==1.6.0
-parso==0.8.1
-pexpect==4.8.0
-pickleshare==0.7.5
-Pillow==8.1.0
-pipreqs==0.4.10
-priority==1.3.0
-prometheus-client==0.9.0
-prompt-toolkit==3.0.10
-Protego==0.1.16
-protobuf==3.14.0
-ptyprocess==0.7.0
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.20
-pydeck==0.5.0
-PyDispatcher==2.0.5
-Pygments==2.7.4
-pyOpenSSL==20.0.1
-pyparsing==2.4.7
-pyrsistent==0.17.3
-python-dateutil==2.8.1
-python-slugify==4.0.1
-pytz==2020.5
-pyzmq==21.0.1
-queuelib==1.6.1
-regex==2020.11.13
-remotezip==0.9.2
-requests==2.25.1
-scikit-learn==0.24.1
-scipy==1.5.4
-Scrapy==2.5.0
-seaborn==0.11.1
-Send2Trash==1.5.0
-service-identity==21.1.0
-six==1.15.0
-smmap==3.0.4
-soupsieve==2.2
-streamlit==0.74.1
-suds-py3==1.4.4.1
-tabulate==0.8.9
-terminado==0.9.2
-testpath==0.4.4
-text-unidecode==1.3
-threadpoolctl==3.0.0
-toml==0.10.2
-toolz==0.11.1
-tornado==6.1
-tqdm==4.56.0
-traitlets==5.0.5
-Twisted==21.7.0
-typing-extensions==3.10.0.0
-tzlocal==2.1
-urllib3==1.26.2
-validators==0.18.2
-w3lib==1.22.0
-watchdog==1.0.2
-wcwidth==0.2.5
-webencodings==0.5.1
-websocket-client==1.1.0
-websockets==9.1
-Werkzeug==2.0.1
-widgetsnbextension==3.5.1
-wordcloud==1.8.1
-wos==0.2.5
-xlrd==2.0.1
-yarg==0.1.9
-zope.interface==5.2.0
+scikit_learn==1.0.2
